--- a/manual.tex
+++ b/manual.tex
@@ -10499,7 +10499,7 @@ con un dibujo:
 
 \begin{figure}[H]
     \includegraphics[width=\linewidth]{const_char_pointer_pointer}
-    \caption{Puntero a carácter constante}
+    \caption{Puntero a puntero a \texttt{char} constante}
     \label{img:constcharpointerpointer}
 \end{figure}
 
@@ -10692,7 +10692,7 @@ definiciones de tipo útiles como aquéllos de tamaño fijo: \verb!int8_t!,
 \verb!int16_t!, etc.; si quisiéramos definir alguna función con un argumento
 de este tipo o de tipo de retorno, sí sería necesario que incluyéramos esta
 cabecera. Si las necesitamos en las implementaciones (en las declaraciones de
-esctructuras, en las definiciones de funciones...), será en el archivo de
+estructuras, en las definiciones de funciones...), será en el archivo de
 código fuente (en el \verb!.c!) donde las incluiremos.
 
 El siguiente archivo es, precisamente, este archivo de código fuente:
